<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="zalho.com.br.loginmvvmexampleapp.model.viewmodel.LoginFragmentViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/login_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Email"
                android:text="@={viewModel.campoLogin}"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <EditText
                android:id="@+id/et_senha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="Senha"
                android:text="@={viewModel.campoSenha}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Entrar"
            android:layout_gravity="center"
            android:onClick="@{viewModel.onClickLogin}"/>

    </LinearLayout>
</layout>