...
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_troca_humor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Trocar humor"
            app:layout_constraintBottom_toBottomOf="@id/lyt_timeline"
            app:layout_constraintStart_toStartOf="@id/lyt_timeline"
            app:layout_constraintEnd_toEndOf="@id/lyt_timeline"
            android:onClick="@{viewModel.onClickTrocarHumor}"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_timeline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:isGone="@{!viewModel.listaVazia}"
            app:itemsTimeline="@{viewModel.listaHumor}"
            app:layout_constraintTop_toTopOf="@id/lyt_timeline"
            app:layout_constraintStart_toStartOf="@id/lyt_timeline"
...
