<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <data>
        <variable
            name="viewModel"
            type="zalho.com.br.loginmvvmexampleapp.model.viewmodel.TrocaHumorHolderViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lyt_adapter_troca_humor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="@{viewModel.onSelectHumor}">

        <ImageView
            android:id="@+id/imagem_troca_humor"
            android:layout_width="0dp"
            android:contentDescription="icone humor selecionado"
            android:layout_height="wrap_content"
            android:src="@{viewModel.evento.getHumorImagePath}"
            tools:src="@drawable/common_google_signin_btn_icon_light"
            app:layout_constraintTop_toTopOf="@id/lyt_adapter_troca_humor"
            app:layout_constraintStart_toStartOf="@id/lyt_adapter_troca_humor"
            app:layout_constraintBottom_toBottomOf="@id/lyt_adapter_troca_humor"/>

        <TextView
            android:id="@+id/texto_troca_humor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.evento.humorInfo}"
            tools:text="Feliz"
            app:layout_constraintStart_toEndOf="@id/imagem_troca_humor"
            app:layout_constraintEnd_toEndOf="@id/lyt_adapter_troca_humor"
            app:layout_constraintTop_toTopOf="@id/imagem_troca_humor"
            app:layout_constraintBottom_toBottomOf="@id/imagem_troca_humor"/>

    </android.support.constraint.ConstraintLayout>

</layout>