<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable
            name="viewModel"
            type="zalho.com.br.loginmvvmexampleapp.model.viewmodel.TrocaHumorFragmentViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lyt_troca_humor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_selecao_humor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:itemsHumor="@{viewModel.eventos}"
            app:layout_constraintTop_toTopOf="@id/lyt_troca_humor"
            app:layout_constraintStart_toStartOf="@id/lyt_troca_humor"
            app:layout_constraintEnd_toEndOf="@id/lyt_troca_humor">

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>

</layout>